@@ -9,7 +9,8 @@ fi
 cd ..
 
 #changed_java_files=$(git diff --cached --name-only --diff-filter=ACMR | grep ".*java$" )
-changed_java_files=$(find . -type f -name "*.java") #all files
-echo $changed_java_files
-#java --enable-preview -jar .cache/google-java-format-1.17.0-all-deps.jar --replace $changed_java_files
+#echo $changed_java_files
+#java -jar .cache/google-java-format-1.17.0-all-deps.jar --replace $changed_java_files
+
+java -jar .cache/google-java-format-1.17.0-all-deps.jar --replace $(find src/main -type f -name "*.java")
 
